refactor: "리뷰 이미지 추가 오류 수정 및 테스트"
- [x] Postman test complete